--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "node-cron": "^1.1.2",
     "request": "^2.79.0",
     "underscore": "^1.8.3"
